--- a/app/src/main/res/layout/clone_qh_settings.xml
+++ b/app/src/main/res/layout/clone_qh_settings.xml
@@ -133,10 +133,8 @@
             android:id="@+id/tvLksjs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginTop="20dp"
             android:text="@string/lksjs"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/tvDragon"
             app:layout_constraintStart_toStartOf="@+id/tvDragon"
             app:layout_constraintTop_toBottomOf="@+id/tvDragon" />
@@ -150,6 +148,46 @@
             app:layout_constraintEnd_toEndOf="@+id/spinnerDragon"
             app:layout_constraintStart_toStartOf="@+id/spinnerDragon"
             app:layout_constraintTop_toTopOf="@+id/tvLksjs" />
+
+        <TextView
+            android:id="@+id/tvJfy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/s_jfy"
+            app:layout_constraintStart_toStartOf="@+id/tvLksjs"
+            app:layout_constraintTop_toBottomOf="@+id/tvLksjs" />
+
+        <Spinner
+            android:id="@+id/spinnerJfy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/clone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvJfy"
+            app:layout_constraintEnd_toEndOf="@+id/spinnerLksjs"
+            app:layout_constraintStart_toStartOf="@+id/spinnerLksjs"
+            app:layout_constraintTop_toTopOf="@+id/tvJfy" />
+
+        <TextView
+            android:id="@+id/tvTxz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/s_txz"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tvJfy"
+            app:layout_constraintTop_toBottomOf="@+id/tvJfy" />
+
+        <Spinner
+            android:id="@+id/spinnerTxz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/clone"
+            app:layout_constraintBottom_toBottomOf="@+id/tvTxz"
+            app:layout_constraintEnd_toEndOf="@+id/spinnerJfy"
+            app:layout_constraintStart_toStartOf="@+id/spinnerJfy"
+            app:layout_constraintTop_toTopOf="@+id/tvTxz" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
